@@ -1,5 +1,6 @@
 package com.kaishui.entitlement.repository;
 
+import com.kaishui.entitlement.entity.Entitlement; // Import Entitlement
 import com.kaishui.entitlement.entity.User;
 import org.bson.types.ObjectId;
 import org.junit.jupiter.api.BeforeEach;
@@ -11,6 +12,7 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import java.util.Collections; // For empty list if needed
 import java.util.Date;
 import java.util.List;
 
@@ -20,7 +22,7 @@ import static org.mockito.Mockito.when;
 class UserRepositoryTest {
 
     @Mock
-    private UserRepository userRepository;
+    private UserRepository userRepository; // This is the interface being mocked
 
     private User user;
 
@@ -33,7 +35,15 @@ class UserRepositoryTest {
         user.setEmail("test@example.com");
         user.setCreatedDate(new Date());
         user.setLastModifiedDate(new Date());
-        user.setAdGroups(List.of("AD_Users"));
+        // Adjust to use entitlements
+        // Example: User belongs to "AD_Users" group with a specific role "ROLE_USER"
+        Entitlement userEntitlement = Entitlement.builder()
+                .adGroup("AD_Users")
+                .roleIds(List.of("ROLE_USER")) // Example role ID
+                .build();
+        user.setEntitlements(List.of(userEntitlement));
+        // If the user has no specific entitlements or you want to test with an empty list:
+        // user.setEntitlements(Collections.emptyList());
     }
 
     @Test
@@ -76,6 +86,50 @@ class UserRepositoryTest {
         Mono<Void> deleted = userRepository.deleteById(user.getId());
 
         StepVerifier.create(deleted)
+                .verifyComplete();
+    }
+
+    // You might want to add tests for your custom query methods if you have any,
+    // for example, findByStaffId or findByAdGroupAndIsActive
+
+    @Test
+    void findByStaffId_Found() {
+        when(userRepository.findByStaffId(user.getStaffId())).thenReturn(Mono.just(user));
+        Mono<User> found = userRepository.findByStaffId(user.getStaffId());
+        StepVerifier.create(found)
+                .expectNext(user)
+                .verifyComplete();
+    }
+
+    @Test
+    void findByStaffId_NotFound() {
+        when(userRepository.findByStaffId("nonexistentStaffId")).thenReturn(Mono.empty());
+        Mono<User> found = userRepository.findByStaffId("nonexistentStaffId");
+        StepVerifier.create(found)
+                .verifyComplete();
+    }
+
+    @Test
+    void findByAdGroupAndIsActive_Found() {
+        // Assuming your repository has a method like this.
+        // The AD group to search for would be one present in the user's entitlements.
+        String targetAdGroup = "AD_Users";
+        if (user.getEntitlements() != null && !user.getEntitlements().isEmpty()) {
+            targetAdGroup = user.getEntitlements().get(0).getAdGroup();
+        }
+
+        when(userRepository.findByAdGroupAndIsActive(targetAdGroup, true)).thenReturn(Flux.just(user));
+        Flux<User> found = userRepository.findByAdGroupAndIsActive(targetAdGroup, true);
+        StepVerifier.create(found)
+                .expectNext(user)
+                .verifyComplete();
+    }
+
+    @Test
+    void findByAdGroupAndIsActive_NotFound() {
+        when(userRepository.findByAdGroupAndIsActive("nonexistentAdGroup", true)).thenReturn(Flux.empty());
+        Flux<User> found = userRepository.findByAdGroupAndIsActive("nonexistentAdGroup", true);
+        StepVerifier.create(found)
                 .verifyComplete();
     }
 }
